Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12698

[Regression] ./configure looks for mkspecs in the install dir

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.0
    • 4.7.0
    • Build System
    • None
    • 199b7ccb2a82e6a87808c3873c158ca38120dfdf

    Description

      Not sure if this is done on purpose or not ...

      Since commits 28c23cdd08c3d6d9f8440047a15efcd865fa4a8c and 1fe3c3f38701c3af27c5385acfb8458d1b85bfca I have the problem to configure Qt to build without Phonon (QTBUG-12466).

      From a previous installation of phonon from git (which I installed after Qt) I still have the file "/local/qt4/mkspecs/modules/qt_phonon.pri" in the install dir, whose contents is "QT_CONFIG *= phonon".

      Probably due to the symlinking of mkspec dirs, configure apparently looks into the install dir, finds this module, and I can no longer configure Qt to build without phonon.

      I could erase the install dir, too, but as I am used to build into a live running system, this would kill my desktop

      Thanks Oswald for your patience...

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              buddenha Oswald Buddenhagen
              cfeck Christoph Feck
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes