fix loading of module configs

do it in qt_config.prf instead of in the autogenerated qconfig.pri
files. this is waaaay more elegant, and allows us to easily use the
magic in that file which avoids loading qt configuration from the qt
install dir while building qt itself.

Reviewed-by: joerg
Reviewed-by: Simon Hausmann
Task-number: QTBUG-12698